--- a/Assets/CSS/styles.css
+++ b/Assets/CSS/styles.css
@@ -37,7 +37,7 @@
  
  .parallax-container {
    /* min-height: 380px; */
-   max-height: 380px;
+   /* max-height: 380px; */
    line-height: 0;
    height: auto;
    color: rgba(255,255,255,.9);
@@ -49,17 +49,19 @@
  @media only screen and (max-width : 992px) {
    .parallax-container .section {
      position: absolute;
-     top: 40%;
+     top: 100%;
    }
    #index-banner .section {
-     top: 10%;
+     top: 0%;
    }
+   .mrt20 {margin-top: 100px}
  }
  
  @media only screen and (max-width : 600px) {
    #index-banner .section {
      top: 0;
    }
+   .mrt20 {margin-top: 100px}
  }
  
  .width100 {
@@ -205,3 +207,4 @@ footer {
  .footerStart {position: absolute;
   bottom: 0; 
 width: 100%;}
+
